--- a/src/app/Components/TodoItem/TodoItem.scss
+++ b/src/app/Components/TodoItem/TodoItem.scss
@@ -37,9 +37,8 @@
   margin-right: 20px;
   margin-left: 3px;
   border-radius: 50%;
-  
+  //position: relative;
 }
-
 
 
 [type="checkbox"]:not(:checked) + label:after,
@@ -50,6 +49,7 @@
   font-size: 20px;  
   color: #09ad7e;
   transition: all .2s;
+  //position: relative;
 }
 
 [type="checkbox"]:not(:checked) + label:after {
@@ -61,10 +61,11 @@
 [type="checkbox"]:checked {
   position: absolute;
   left: -9999px;
+  position: relative;
 }
 [type="checkbox"]:not(:checked) + label,
 [type="checkbox"]:checked + label {
-  //position: relative;
+  position: relative;
   padding-top: 10px;
   cursor: pointer;
 }
