--- a/src/app/Containers/TodoList/TodoList.scss
+++ b/src/app/Containers/TodoList/TodoList.scss
@@ -88,10 +88,14 @@ button {
 
 .active {
   //text-transform: uppercase;
-  border: 2px solid gray;
+  border: 2px solid black;
 }
 
 input[type=radio]{
   display: none;
+}
+
+button:focus{
+  background: none;
 }
 
